adjusted text alignment to center and 1 mistake correction

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@
   a{
     text-decoration: none;
     color: white;
+     text-align: center;
   }
   .project p{
     text-align: center;
